css/main.css
/* MAIN */

html {
  font-size: 62.5%;
  overflow-x: hidden;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/* TYPE */

body {
  font-size: 1.8rem; /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: 1.6;
  font-weight: 400;
  font-family: "roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #393E46;
  background-color: #EEEEEE ;
  overflow-x: hidden;
}

h1 { font-size: 3.0rem; line-height: 1.35; letter-spacing: -.1rem; }
h2 { font-size: 2.5rem; line-height: 1.35;  letter-spacing: -.1rem; }
h3 { font-size: 2.5rem; line-height: 1.35; letter-spacing: -.1rem; }
h4 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
h5 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }


/* HEADER */

#header {
  display: block;
  padding: 1rem;
  background: #222831;
  position: relative;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}


#header img {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
}

/* CONTAINER */

.container {
  max-width: 600px;
  width: 100%;
  margin: 0 auto;
  padding: 1rem;
}

hr {
  border: 0;
  padding: 1px;
}

/* MARKDOWN FRIENDLY CONTENT BLOCKS */

.container h1, h2, h4 {
  border-left: solid;
  border-right: solid;
  border-width: thin;
  border-color: rgba(34, 40, 49, 0.25);
}

.container h1 {
  margin: 0;
  background: #fff;
  text-align: center;
  padding: 2rem 1rem 1rem 1rem;
  
}

.container p {
  background: #fff;
  margin: 0;
  border-left: solid;
  border-right: solid;
  border-width: thin;
  border-color: rgba(34, 40, 49, 0.25);
  padding: 0 1.8rem 1rem 1.8rem;
}


.container a{
  font-size: 1.8rem;
  font-weight: 600;
  color: #00ADB5;
  display: block;
  text-transform: uppercase;
  text-decoration:none;
  text-align: center;
  padding: 1rem;
  border-bottom: solid;
  border-left: solid;
  border-right: solid;
  border-top: solid;
  border-width: thin;
  border-color: rgba(34, 40, 49, 0.25);
  background: #FFF;
  
}

h2 {
  text-align: center;
  margin: 0;
  background: #fff;
  padding: 1rem 1.8rem;
}

h3 {
  text-align: center;
  margin: 0;
  padding: 0rem 1rem 1rem 1rem;
}

h4 {
  text-align: center;
  margin: 0;
  background: #fff;
  padding: 1rem 1.8rem 0 1.8rem;
}


.container img{
  width: 100%;
  height: auto;
  display: block;
  border-top: solid;
  border-left: solid;
  border-right: solid;
  border-width: thin;
  border-color: rgba(34, 40, 49, 0.25);
}


.video-container {
  position: relative;
  padding-top: 35px;
  padding-bottom: 50%;
  height: 0;
  overflow: hidden;
}


.video-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-top-right-radius: 2px;
  border-top-left-radius: 2px;
}


/* FOOTER */

footer {
  padding: 0;
  margin: 0;
  overflow: hidden;
}


footer h1{
  padding: 1.6rem;
  margin: 0;
  text-align: center;
}

ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}


li a {
  font-size: 1.8rem;
  font-weight: 600;
  color: #00ADB5;
  text-transform: uppercase;
  text-decoration:none;
  display: block;
  text-align: center;
  padding: .5rem;
}

